--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script>
     // Remplacez 'votre_nom_d_utilisateur' par votre nom d'utilisateur GitHub
-    const username = 'votre_nom_d_utilisateur';
+    const username = 'tomparte';
 
     fetch(`https://api.github.com/users/${username}/repos`)
         .then(response => response.json())
